base/gitea/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  labels:
    app: gitea
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    app: gitea
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 2222
      targetPort: ssh
      nodePort: 32222
      protocol: TCP
  selector:
    app: gitea
